# kroma-prover

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  download_params.sh  rust-toolchain
.github/: CODEOWNERS
.github/workflows/: ci.yml  rust.yaml
contrib/: download_params.sh
ffi/src/: prove.rs
grpc/: Cargo.toml  build.rs
grpc/src/: lib.rs  server.rs  server_config.rs  service.rs
l2client/: Cargo.toml
l2client/src/: lib.rs
prover-grpc/: Cargo.toml  build.rs  config.json
prover-grpc/src/: client_mock.rs  l2_client.rs  prover_lib.rs  prover_server.rs  server.rs  utils.rs
prover-server/: Cargo.toml
prover-server/src/: mock_client.rs  prove.rs  server_main.rs  spec.rs  utils.rs
prover_lib/: Cargo.toml
prover_lib/src/: args.rs  lib.rs  params_seed.rs  prover_lib.rs
storage/: Cargo.toml
storage/src/: s3.rs
types/: Cargo.toml
types/src/: eth.rs
utils/: Cargo.toml
utils/src/: lib.rs
zkevm/: .gitignore  Cargo.toml
zkevm/src/: circuit.rs  prover.rs  utils.rs
zkevm/src/circuit/: builder.rs
zkevm/tests/: integration.rs  test_util.rs
zkevm/tests/traces/bridge/: withdraw_erc20.json  withdraw_ether.json
zkevm/tests/traces/impure/simple/: impure.json
zkevm/tests/traces/kanvas/deposit/: deposit.json
zkevm/tests/traces/kanvas/deposit_with_mint/: deposit_with_mint.json
zkevm/tests/traces/kanvas/non_deposit/: non_deposit.json
zkevm/tests/traces/kroma/: multiple_transfers_0.json  type2_gasprice_accesslist.json  user_deposit.json
zkevm/tests/traces/pure/: put.json
zkevm/tests/traces/voost/: 07.json
