[workspace]
members = [
    "types",
    "zkevm",
    "bin",
    "ffi",
    "prover-server"
]

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/kroma-network/halo2.git", branch = "halo2-with-tachyon"  }

[profile.test]
opt-level = 3
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = true
