[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
prost = "0.11.6"
tonic = "0.8.3"
prover_lib = { path = "../prover_lib" }
zkevm = { path = "../zkevm" }
signal-hook = "0.3.14"
clap = "4.1.4"
once_cell = "1.17.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.8.4"
