[package]
name = "l2client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
jsonrpsee = { version = "0.16.2", features = ["full"] }
jsonrpsee-core = "0.16.2"
once_cell = "1.17.0"
zkevm = { path = "../zkevm" }
types = { path = "../types", features = ["test"] }
