[package]
name = "prover_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4"
rand = "0.8"
rand_core = "0.6.4"
rand_xorshift = "0.3"
types = { path = "../types", features = ["test"] }
utils = { path = "../utils" }
zkevm = { path = "../zkevm" }
halo2_proofs = { git = "https://github.com/light-scale/halo2.git", branch = "ls-dev-0902" }
halo2-snark-aggregator-circuit = { git = "https://github.com/light-scale/halo2-snark-aggregator", branch = "ls-dev-0920-tpl" }
once_cell = "1.17.0"
l2client = { path = "../l2client" }
